--- a/index.html
+++ b/index.html
@@ -308,8 +308,15 @@
                 sentiment: { positif: 330, negatif: 18, netral: 151 }, // Updated sentiment data
                 wordCloud: 'https://i.postimg.cc/qBWN7KKG/image.png', // Updated word cloud
                 accuracy: '82.9%' // Updated accuracy
+            },
+            {
+                name: 'BPBD', // New entry for BPBD
+                description: 'Badan Penanggulangan Bencana Daerah (BPBD) bertanggung jawab dalam penanganan bencana alam dan non-alam. Analisis sentimen ini mengukur respons masyarakat terhadap kecepatan tanggap darurat dan efektivitas bantuan yang diberikan.',
+                icon: 'https://i.postimg.cc/WzJ4TVPs/image.png', // BPBD icon
+                sentiment: { positif: 395, negatif: 27, netral: 89 }, // BPBD sentiment data
+                wordCloud: 'https://i.postimg.cc/Z5zWYWR2/image.png', // BPBD word cloud
+                accuracy: '85.1%' // BPBD accuracy
             }
-            // Removed Sistem Informasi Epsilon and Sistem Informasi Zeta
         ];
 
         const wrapLabels = (label, maxWidth) => {
