--- a/index.html
+++ b/index.html
@@ -201,12 +201,8 @@
                         <div class="bg-gray-50 p-6 rounded-xl ring-1 ring-gray-200">
                             <ul class="list-disc list-inside text-gray-700 space-y-3 mb-6">
                                 <li>**Tujuan Sistem Informasi:** Sistem informasi ini dirancang sebagai proyek pembelajaran untuk memenuhi tugas akhir kuliah.</li>
-                                <li>**Data Simulasi:** Semua data yang ditampilkan dalam dasbor ini (termasuk grafik dan total sentimen) adalah data simulasi dan tidak mencerminkan angka atau metrik dunia nyata.</li>
-                                <li>**Visualisasi Dinamis:** Grafik pada halaman "Home" disesuaikan secara proporsional berdasarkan "Data Twitter" di bilah sisi. Sedangkan, grafik pada halaman detail memiliki data uniknya sendiri.</li>
-                                <li>**Placeholder Gambar:** Gambar *word cloud* adalah *placeholder* dan tidak dihasilkan secara dinamis berdasarkan data sentimen.</li>
-                                <li>**Desain Responsif:** Sistem informasi ini dirancang untuk responsif di berbagai ukuran layar, dari seluler hingga desktop.</li>
-                                <li>**Perhitungan Persentase:** Persentase pada grafik lingkaran dihitung berdasarkan proporsi data kategori terhadap total data sentimen.</li>
-                                <li>**Referensi Desain:** Tata letak dan elemen visual dasbor ini terinspirasi oleh praktik desain UI modern.</li>
+                                <li>**Data Tampilan:** Halaman ini hanya menampilkan data yang sudah diolah sebelumnya.</li>
+                                <li>**Data Terbarukan:** Data terbarukan didapat dari bulan Juni 2025.</li>
                             </ul>
                         </div>
                     </div>
@@ -220,7 +216,9 @@
                         </header>
                         <div class="bg-gray-50 p-6 rounded-xl ring-1 ring-gray-200">
                             <h2 class="text-xl font-semibold text-gray-700 mb-4">Detail</h2>
-                            <p class="text-gray-700">Sistem informasi ini dirancang untuk memvisualisasikan metrik data utama dan sentimen. Dikembangkan menggunakan HTML, Tailwind CSS, dan Chart.js untuk representasi data.</p>
+                            <p class="text-gray-700">Salam,</p>
+                            <p class="text-gray-700 mt-2">Saya Muhammad Difa'arkan, mahasiswa semester akhir Prodi Sistem Informasi Kota Cerdas, Jurusan Teknik Elektro, Politeknik Negeri Banjarmasin.</p>
+                            <p class="text-gray-700 mt-2">Website ini dibuat untuk memenuhi persyaratan proyek akhir kuliah dan digunakan hanya untuk media pembelajaran.</p>
                         </div>
                     </div>
                 </main>
