--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                             </div>
 
                             <div class="mt-6 bg-white p-4 rounded-xl ring-1 ring-gray-200">
-                                <h3 class="text-lg font-semibold text-gray-700 mb-2">Awan Kata Kunci Terkait</h3>
+                                <h3 class="text-lg font-semibold text-gray-700 mb-2">Wordclouds Terkait</h3>
                                 <!-- Updated wordCloud for BPJS and Pegadaian -->
                                 <img id="wordCloudImage" src="https://i.postimg.cc/v84xFpRV/image.png" alt="Word Cloud" class="w-full h-auto rounded-lg object-contain mx-auto my-4">
                             </div>
